--- a/lesson19/style.css
+++ b/lesson19/style.css
@@ -1,5 +1,4 @@
-
-.circle{
+ .circle{
 	width:100px;
 	height:100px;
 	border-radius:50%;
@@ -25,7 +24,9 @@
 	border-radius:10%;
 	transition:transform 2s ;
 	background: darkturquoise;
+	border-radius: 5px 200px / 120px;
 }
 .square2:hover{
-	 transform: scale(2);
+	 transform:rotate ;
+	 
 }
